# cmake-tutorial

./: .gitignore  README.md
01-basic-cmd/: CMakeLists.txt  build.sh  script.cmake
02-lang-syntax/: CMakeLists.txt
03-variables/: CMakeLists.txt  build.sh
04-scope/: CMakeLists.txt  build.sh
04-scope/subdir/: CMakeLists.txt
05-test_run/: CMakeLists.txt
06-configure-headers/: CMakeLists.txt  build.sh  configure.h.in
07-find-package/: CMakeLists.txt  build.sh
07-find-package/cmake/module/: FindPQXX.cmake
08-install/: CHANGELOG  CMakeLists.txt  INSTALL  build.sh
08-install/cmake/: CrcConfig.cmake  CrcConfig.cmake.in  Install.cmake
08-install/src/: CMakeLists.txt
08-install/src/crc/: CMakeLists.txt  const_crc-no-concept.hpp  crc.cpp  crc_template.hpp
08-install/src/crc/include/crc/: crc.hpp
08-install/src/crc/test/: compile_feature_cxx_20_concepts.cpp
08-install/src/crc_console/: CMakeLists.txt  main.cpp
doc/: cmake_variables.md  command-definitiopns.md  control-structures.md  external-packages.md  list-subcommands.md  project-structure.md  targets.md
doc/commands/: configure-file.md  execute_process.md  include.md  message.md
xx-allocator/: CMakeLists.txt  build.sh
xx-allocator/src/: CMakeLists.txt
xx-allocator/src/allocator/: chunk.cpp  chunk.hpp  fixed_allocator.cpp  fixed_allocator.hpp  small_obj_allocator.cpp  small_obj_allocator_impl.cpp  small_obj_allocator_impl.hpp
xx-allocator/src/allocator/include/allocator/: small_obj_allocator.hpp  small_object.hpp
xx-allocator/src/singleton/: lifetime_tracker.cpp
xx-allocator/src/singleton/include/singleton/: singleton.hpp
xx-allocator/src/threads/include/threads/: threading_model.hpp
xx-allocator/test/: CMakeLists.txt  lang_features_test_main.cpp
xx-allocator/test/chunk/: CMakeLists.txt  TestChunk.cpp
